Fix J8 incompatibility (#2)